@@ -1,4 +1,3 @@
-DIST refpolicy-2.20110726.tar.bz2 588033 RMD160 9803effffe1dbb28d52bee03432e052f4fdc8d3f SHA1 cc27b06c3f541d8f2c57c52804ab6893afcd9db2 SHA256 8159b7535aa0f805510e4e3504b1317d7083b227f0ef3df51c6f002ed70ecedb
-EBUILD selinux-cyrus-sasl-2.20110726.ebuild 251 RMD160 afcf99702914b8465b3867006d3abd98ede6ba8a SHA1 9f2ed2c8ed842828594bef53b5bb30cd478615f6 SHA256 36f695aa8ccd8fe8f7551a18ea262616fc6591c916bd11e67a627232c973f195
-MISC ChangeLog 3448 RMD160 1f52d083a62ca6ce56f0befe3f8781143016fdd3 SHA1 836c8142dfb0f0edbe4ba2f7ad43bf64d36faf02 SHA256 808b9ed882bbb17055f6e9f381d9d809c429de3bc968bc4a3ea39f5dbfa574fd
+EBUILD selinux-cyrus-sasl-2.20110726.ebuild 355 RMD160 bd4e5a10c2f99976ec77432a45842a773433463a SHA1 bada0adafc1f48323a050758e361f722be0d7840 SHA256 3f05c2ce56a986f0af9a16293023277d96afff1ada49cc2a1b86e5de603b1835
+MISC ChangeLog 3634 RMD160 754017d93b4d5631a9d28d238b4ea2de69c8a6e1 SHA1 616e643907f39bd5d160a1c83297fbde57ee39ca SHA256 d13e02505b2e08d483d1db21222331e32bca133831f120b2dbc31457961bac18
 MISC metadata.xml 234 RMD160 51447c89daf70de4e1dcc0b79a62d72177152008 SHA1 e0817c32a2819469792a8c0f072ec566a9139759 SHA256 3c5b056e162fb3ba5a24558ba285eb6f9f91fc7b3729a33d73c67d48d28bcaba
