@@ -1,4 +1,4 @@
 DIST refpolicy-2.20110726.tar.bz2 588033 RMD160 9803effffe1dbb28d52bee03432e052f4fdc8d3f SHA1 cc27b06c3f541d8f2c57c52804ab6893afcd9db2 SHA256 8159b7535aa0f805510e4e3504b1317d7083b227f0ef3df51c6f002ed70ecedb
-EBUILD selinux-sasl-2.20110726.ebuild 239 RMD160 976fdb9d7ad690dac79fc67fbe2aa89f54760cf7 SHA1 6465907c09e65aed9643a1834189b15e60ec90bc SHA256 0041993abea993152c7413cb20737cabdc3bbbcde5edd46c32b9266fcb4b1fac
-MISC ChangeLog 837 RMD160 fe8de6b9c35f96a07b2016752c0f51d053944b13 SHA1 3ecbc672660af7c09dbab09ce054837243864715 SHA256 e090bd31b20a50576d831dbafbb54d6d6dc938670d13a58bfbc19c6a4209f9ae
+EBUILD selinux-sasl-2.20110726.ebuild 337 RMD160 6e0573c602107a6737eb8241df97582026ccc37e SHA1 150b532bb83e63867f90642ca724e4702d860f39 SHA256 619ba922b4313febb8090d41ee5fb15d281f8b2b898be5d1fdc5e962abd572b9
+MISC ChangeLog 936 RMD160 c242eed7cad3eaa64f7996537b4c451ec2530678 SHA1 e888c36604854e25b1e3d0fe9dc47eeecd0cf3b0 SHA256 786b67bd530810fdfe3c7545a32ca40fc736856b35ab80c83e20ae5123c0bb39
 MISC metadata.xml 228 RMD160 90f8c21c16a135cb6727a949da328fef912dfc85 SHA1 16fd30937eeef2563ce577d2a2282928ac82fd1c SHA256 879b7a8b419a879258afa5169f6c9347c9602465b285d8248b5c61ec623e9b5f
