@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-sasl/ChangeLog,v 1.2 2011/06/02 12:54:44 blueness Exp $
 
+  13 Aug 2011; <swift@gentoo.org> selinux-sasl-2.20110726.ebuild:
+  Block on incorrect cyrus-sasl
+
   02 Jun 2011; Anthony G. Basile <blueness@gentoo.org>
   selinux-sasl-2.20101213-r1.ebuild:
   Stable amd64 x86
